[tool.poetry]
name = "wallet"
version = "0.1.0"
description = ""
authors = ["Johannes Bogen <johannesbogen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.13.37"
patito = "^0.1.2"
jupyterlab = "^3.4.2"
pandas = "^1.4.2"
nb-black = "^1.0.7"
python-dotenv = "^0.20.0"
pyarrow = "^8.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
